[project]
name = "rag-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.10.1",
    "isort>=8.0.1",
    "nltk==3.9.1",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.8",
]
[project.scripts]
keyword-search = "rag_search_engine.keyword_search_cli:main"
